Fixed header spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,15 +8,11 @@
     @apply font-body;
   }
 
-  #__next {
-    @apply grid grid-cols-12;
-  }
-
   header {
-    @apply col-span-full bg-indigo-dye text-white;
+    @apply grid grid-cols-12 bg-indigo-dye text-white;
   }
 
   main {
-    @apply col-span-full bg-white text-black grid grid-cols-12;
+    @apply bg-white text-black;
   }
 }
